@@ -3,9 +3,7 @@ package com.nextdaydelivery.store.application.service;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 
 import com.nextdaydelivery.store.domain.entity.Category;
@@ -22,10 +20,9 @@ import com.nextdaydelivery.store.presentation.dto.StoreCreationResponse;
 import com.nextdaydelivery.store.presentation.dto.StoreListResponse;
 import com.nextdaydelivery.store.presentation.dto.StoreResponse;
 import com.nextdaydelivery.store.presentation.dto.StoreSearchCondition;
-import com.nextdaydelivery.store.presentation.dto.StoreUpdateRequest;
 import com.nextdaydelivery.user.domain.entity.User;
-import jakarta.persistence.EntityManager;
-import jakarta.persistence.TypedQuery;
+import com.nextdaydelivery.user.domain.repository.UserRepository;
+import java.math.BigDecimal;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -39,6 +36,7 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.test.util.ReflectionTestUtils;
 
 @ExtendWith(MockitoExtension.class)
 class StoreServiceImplTest {
@@ -54,177 +52,122 @@ class StoreServiceImplTest {
     @Mock
     private StoreCategoryService storeCategoryService;
     @Mock
-    private EntityManager em;
+    private UserRepository userRepository;
 
     @InjectMocks
     private StoreServiceImpl storeService;
 
-    // 공통으로 사용할 Mock 객체 생성 메서드들
+    // --- Helper Methods ---
     private User createMockUser() {
-        return User.builder()
-                .username("test_owner")
-                .nickname("임시사장님")
+        User user = User.builder()
+                .username("test_user")
+                .nickname("테스트사장님")
+                .email("test@test.com")
+                .password("password")
                 .build();
+        // 빌더에 없는 userId를 리플렉션으로 주입
+        ReflectionTestUtils.setField(user, "userId", 1L);
+        return user;
     }
 
     private StoreAddress createMockAddress() {
         return StoreAddress.builder()
-                .sido("서울특별시")
-                .sigungu("강남구")
-                .dong("역삼동")
+                .sido("서울").sigungu("강남구").dong("역삼동")
                 .build();
     }
 
+    private Store createMockStore(User user, StoreAddress address) {
+        Store store = Store.builder()
+                .name("조회맛집")
+                .user(user)
+                .storeAddress(address)
+                .detailAddress("123번지")
+                .build();
+
+        // 빌더에 없는 필드들을 리플렉션으로 주입
+        ReflectionTestUtils.setField(store, "storeId", UUID.randomUUID());
+        ReflectionTestUtils.setField(store, "ratingAvg", new BigDecimal("4.5"));
+        ReflectionTestUtils.setField(store, "reviewCount", 10);
+        return store;
+    }
+
+    // --- 1. 가게 생성 테스트 ---
     @Test
     @DisplayName("가게 생성 - 성공")
     void createStore_success() {
-        // Given
+        Long userId = 1L;
         StoreCreationRequest request = new StoreCreationRequest(
-                "치킨나라", "강남구", "서울특별시", "역삼동", "테헤란로 123", List.of("치킨")
+                "넥스트치킨", "강남구", "서울", "역삼동", "상세주소", List.of("치킨")
         );
+        User user = createMockUser();
 
-        // Mocking 로직 생략 (이전과 동일)
-        TypedQuery<User> mockQuery = mock(TypedQuery.class);
-        given(em.createQuery(anyString(), eq(User.class))).willReturn(mockQuery);
-        given(mockQuery.setParameter(anyString(), any())).willReturn(mockQuery);
-        given(mockQuery.getResultList()).willReturn(List.of(createMockUser()));
+        given(userRepository.findById(userId)).willReturn(Optional.of(user));
         given(storeAddressService.getOrCreateAddress(any(), any(), any())).willReturn(createMockAddress());
-        given(categoryService.getOrCreateCategory("치킨")).willReturn(
+        given(categoryService.getOrCreateCategory(anyString())).willReturn(
                 Category.builder().categoryId(UUID.randomUUID()).categoryName("치킨").build());
 
-        // When
-        StoreCreationResponse response = storeService.createStore(request);
+        StoreCreationResponse response = storeService.createStore(request, userId);
 
-        // [로그 출력]
-        System.out.println("\n✅ [가게 생성 테스트 응답 데이터]");
-        System.out.println("생성된 가게명: " + response.name());
-        System.out.println("카테고리 ID 리스트: " + response.categoryIds());
-
-        // Then
-        assertThat(response.name()).isEqualTo("치킨나라");
+        assertThat(response.name()).isEqualTo("넥스트치킨");
+        verify(storeRepository).save(any(Store.class));
     }
 
+    // --- 2. 가게 상세 조회 테스트 ---
     @Test
     @DisplayName("가게 상세 조회 - 성공")
     void getStore_success() {
-        // Given
         UUID storeId = UUID.randomUUID();
-        Store store = Store.builder()
-                .user(createMockUser())
-                .storeAddress(createMockAddress())
-                .name("치킨나라")
-                .detailAddress("123번지")
-                .build();
+        Store store = createMockStore(createMockUser(), createMockAddress());
 
         given(storeRepository.findById(storeId)).willReturn(Optional.of(store));
         given(storeCategoryRepository.findAllByStore(store)).willReturn(List.of());
 
-        // When
         StoreResponse response = storeService.getStore(storeId);
 
-        // [로그 출력]
-        System.out.println("\n✅ [가게 상세 조회 테스트 응답 데이터]");
-        System.out.println("가게 ID: " + response.storeId());
-        System.out.println("사장님 닉네임: " + response.ownerNickname());
-        System.out.println("전체 주소: " + response.fullAddress());
-        System.out.println("평점/리뷰: " + response.ratingAvg() + " / " + response.reviewCount());
-
-        // Then
-        assertThat(response.name()).isEqualTo("치킨나라");
+        assertThat(response.name()).isEqualTo("조회맛집");
+        assertThat(response.ratingAvg()).isEqualByComparingTo("4.5");
     }
 
+    // --- 3. 가게 목록 조회 테스트 ---
     @Test
     @DisplayName("가게 목록 조회 - 성공")
     void getStoreList_success() {
-        // Given
-        StoreSearchCondition condition = new StoreSearchCondition("치킨", null, null, null, null);
+        StoreSearchCondition condition = new StoreSearchCondition("맛집", null, null, null, null);
         Pageable pageable = PageRequest.of(0, 10);
-        Store mockStore = Store.builder().user(createMockUser()).storeAddress(createMockAddress()).name("치킨나라")
-                .detailAddress("역삼동").build();
-        Page<Store> storePage = new PageImpl<>(List.of(mockStore), pageable, 1);
-        StoreCategory storeCategory = StoreCategory.builder().category(Category.builder().categoryName("치킨").build())
-                .build();
 
-        given(storeRepository.searchStores(any(), any())).willReturn(storePage);
-        given(storeCategoryRepository.findFirstByStore(any())).willReturn(Optional.of(storeCategory));
+        Store store = createMockStore(createMockUser(), createMockAddress());
+        Page<Store> page = new PageImpl<>(List.of(store), pageable, 1);
 
-        // When
+        Category category = Category.builder().categoryName("치킨").build();
+        StoreCategory sc = StoreCategory.builder().store(store).category(category).build();
+
+        given(storeRepository.searchStores(any(), any())).willReturn(page);
+        given(storeCategoryRepository.findAllByStoreIn(any())).willReturn(List.of(sc));
+
         Page<StoreListResponse> result = storeService.getStoreList(condition, pageable);
 
-        // [로그 출력]
-        System.out.println("\n✅ [가게 목록 조회 테스트 데이터]");
-        System.out.println("검색 결과 수: " + result.getTotalElements());
-        result.getContent().forEach(s ->
-                System.out.println("조회된 가게: " + s.name() + " (" + s.mainCategory() + ")")
-        );
-
-        // Then
-        assertThat(result.getContent().getFirst().name()).isEqualTo("치킨나라");
+        assertThat(result.getContent().get(0).mainCategory()).isEqualTo("치킨");
     }
 
     @Test
-    @DisplayName("가게 정보 수정 - 성공")
-    void updateStore_success() {
-        // 1. Given
-        UUID storeId = UUID.randomUUID();
-        StoreUpdateRequest request = new StoreUpdateRequest(
-                "맛있어진 치킨집", "서울특별시", "강남구", "역삼동", "테헤란로 999", List.of()
-        );
-
-        // 수정 전 기존 엔티티
-        Store existingStore = Store.builder()
-                .user(createMockUser())
-                .storeAddress(createMockAddress()) // 서울특별시 강남구 역삼동
-                .name("옛날 치킨집")
-                .detailAddress("테헤란로 123")
-                .build();
-
-        // 수정될 새로운 주소 객체
-        StoreAddress newAddress = StoreAddress.builder()
-                .sido("서울특별시").sigungu("강남구").dong("역삼동").build();
-
-        given(storeRepository.findById(storeId)).willReturn(Optional.of(existingStore));
-        given(storeAddressService.getOrCreateAddress(anyString(), anyString(), anyString())).willReturn(newAddress);
-        given(storeCategoryRepository.findAllByStore(any())).willReturn(List.of());
-
-        // [수정 전 로그]
-        System.out.println("\n✅ [가게 수정 테스트 - 데이터 변화 확인]");
-        System.out.println("수정 전 이름: " + existingStore.getName());
-        System.out.println("수정 전 상세주소: " + existingStore.getDetailAddress());
-
-        // 2. When
-        StoreResponse response = storeService.updateStore(storeId, request);
-
-        // 3. Then
-        // [수정 후 로그]
-        System.out.println("수정 후 이름: " + response.name());
-        System.out.println("수정 후 상세주소: " + response.fullAddress()); // fullAddress는 조합된 문자열
-
-        assertThat(response.name()).isEqualTo("맛있어진 치킨집");
-        verify(storeCategoryService).updateStoreCategories(eq(existingStore), any());
-    }
-
-    @Test
-    @DisplayName("가게 삭제 - 성공 (Soft Delete 검증)")
+    @DisplayName("가게 삭제 - 성공")
     void deleteStore_success() {
-        // Given
+        // 1. 준비 (Given)
         UUID storeId = UUID.randomUUID();
-        Store store = Store.builder().user(createMockUser()).storeAddress(createMockAddress()).name("삭제될가게")
-                .detailAddress("주소").build();
+        Long userId = 1L; // 삭제를 시도하는 유저 ID
+        User user = createMockUser(); // 이 안에서 userId가 1L로 설정되어 있음
+        Store store = createMockStore(user, createMockAddress());
+
+        // storeId로 가게 조회 시 store 반환
         given(storeRepository.findById(storeId)).willReturn(Optional.of(store));
 
-        // [삭제 전 로그]
-        System.out.println("\n✅ [가게 삭제 테스트 - 상태 변화 확인]");
-        System.out.println("삭제 전: deletedAt=" + store.getDeletedAt() + ", deletedBy=" + store.getDeletedBy());
+        // [추가] 삭제자 ID(1L)로 유저 조회 시 user 반환
+        given(userRepository.findById(userId)).willReturn(Optional.of(user));
 
-        // When
-        storeService.deleteStore(storeId, "admin_user");
+        // 2. 실행 (When)
+        storeService.deleteStore(storeId, userId);
 
-        // [삭제 후 로그]
-        System.out.println("삭제 후: deletedAt=" + store.getDeletedAt() + ", deletedBy=" + store.getDeletedBy());
-
-        // Then
-        assertThat(store.getDeletedAt()).isNotNull();
-        assertThat(store.getDeletedBy()).isEqualTo("admin_user");
+        // 3. 검증 (Then)
+        assertThat(ReflectionTestUtils.getField(store, "deletedAt")).isNotNull();
     }
 }
